buttons added and implementation begun

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,7 +21,7 @@
             android:textAlignment="textEnd"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/input_output_edit_text"
+            android:id="@+id/editText"
             android:text="@string/input_and_output_textfield_text"
             android:layout_span="6"/>
     </TableRow>
