--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="textEnd"
-            android:inputType="numberDecimal"
+            android:inputType="text"
             android:ems="10"
             android:id="@+id/input_output_edit_text"
             android:text="@string/input_and_output_textfield_text"
